apps/express-app/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-app
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
        - name: express-app
          image: dominwong4/express-app:v3
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
