apps/express-app/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-app
  namespace: staging
  labels:
    job: express-app
    app: express-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
spec:
  type: ClusterIP
  selector:
    app: express-app
  ports:
    - port: 80
      targetPort: 3000
